--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     function buyPotion(type) {
       const costMap = { small: 50, medium: 100, large: 200 };
-      const labelMap = { small: "소형", medium: "중형", large: "대형" };
+      const labelMap = { small: "소형", medium: "중형", large: "대형" extraLarge: "초대"};
       const cost = costMap[type];
     
       let count = parseInt(document.getElementById("buyCount").value);
