--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           level: 1,
           hp: 100,
           maxHp: 100,
-          potions: { small: 3, medium: 1, large: 0 },
+          potions: { small: 3, medium: 1, large: 0, extralarge: 0},
           str: 0,
           dex: 0,
           con: 0
