--- a/index.html
+++ b/index.html
@@ -193,7 +193,49 @@
   </div>
 
   <script>
-    let userData 형"};
+    let userData = null;
+    let inDungeon = false;
+    let dungeonInterval;
+    let currentStage = 1;
+    const maxStage = 100;
+
+    function log(msg) {
+      const logDiv = document.getElementById("log");
+      logDiv.innerHTML = `<div>> ${msg}</div>` + logDiv.innerHTML;
+      if (logDiv.childElementCount > 50) {
+        logDiv.removeChild(logDiv.lastChild); // 오래된 로그 제거
+      }
+    }
+
+    function updateUI() {
+      if (!userData) return;
+      document.getElementById("gold").innerText = userData.gold;
+      document.getElementById("exp").innerText = userData.exp;
+      document.getElementById("dungeonTime").innerText = userData.dungeonTime;
+      document.getElementById("hp").innerText = userData.hp;
+      document.getElementById("maxHp").innerText = userData.maxHp;
+      document.getElementById("level").innerText = userData.level;
+      document.getElementById("potionSmall").innerText = userData.potions.small;
+      document.getElementById("potionMedium").innerText = userData.potions.medium;
+      document.getElementById("potionLarge").innerText = userData.potions.large;
+      document.getElementById("stageDisplay").innerText = currentStage;
+      document.getElementById("goldShop").innerText = userData.gold;
+      document.getElementById("goldDisplay").innerText = ` 골드: ${userData.gold}`;
+      document.getElementById("statPointDisplay").innerText = userData.statPoints;
+
+      const hpPercent = (userData.hp / userData.maxHp) * 100;
+      document.getElementById("hpBar").style.width = hpPercent + "%";
+      document.getElementById("hpText").innerText = `${userData.hp} / ${userData.maxHp}`;
+
+      const expToNext = userData.level * 100;
+      const expPercent = (userData.exp / expToNext) * 100;
+      document.getElementById("expBar").style.width = expPercent + "%";
+      document.getElementById("expText").innerText = `${userData.exp} / ${expToNext}`;
+    }
+
+    function buyPotion(type) {
+      const costMap = { small: 50, medium: 100, large: 200 };
+      const labelMap = { small: "소형", medium: "중형", large: "대형" extraLarge: "초대형"};
       const cost = costMap[type];
     
       let count = parseInt(document.getElementById("buyCount").value);
