--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
     }
 
     function buyPotion(type) {
-      const costMap = { small: 50, medium: 100, large: 200 };
-      const labelMap = { small: "소형", medium: "중형", large: "대형" extraLarge: "초대형"};
+      const costMap = { small: 10, medium: 100, large: 1000, extralarge: 10000};
+      const labelMap = { small: "소형", medium: "중형", large: "대형" extralarge: "초대형"};
       const cost = costMap[type];
     
       let count = parseInt(document.getElementById("buyCount").value);
