--- a/index.html
+++ b/index.html
@@ -263,19 +263,19 @@
       if (userData.potions.extralarge > 0 && missingHp >= 10000 + userData.maxHp*0.15) {
         userData.potions.extralarge--;
         userData.hp += 10000 + userData.maxHp*0.15
-        log("초대형 물약 사용! 체력 "+10000 + userData.maxHp*0.15+" 회복");
+        log("초대형 물약 사용! 체력 "+(10000 + userData.maxHp*0.15)+" 회복");
       } else if (userData.potions.large > 0 && missingHp >= 1000 + userData.maxHp*0.07) {
         userData.potions.large--;
         userData.hp += 1000 + userData.maxHp*0.07;
-        log("대형 물약 사용! 체력 "+1000 + userData.maxHp*0.07+" 회복");
+        log("대형 물약 사용! 체력 "+(1000 + userData.maxHp*0.07)+" 회복");
       } else if (userData.potions.medium > 0 && missingHp >= 100 + userData.maxHp*0.03) {
         userData.potions.medium--;
         userData.hp += 100 + userData.maxHp*0.03;
-        log("중형 물약 사용! 체력 "+100 + userData.maxHp*0.03+" 회복");
+        log("중형 물약 사용! 체력 "+(100 + userData.maxHp*0.03)+" 회복");
       } else if (userData.potions.small > 0 && missingHp >= 10 + userData.maxHp*0.01) {
         userData.potions.small--;
         userData.hp += 10 + userData.maxHp*0.01;
-        log("소형 물약 사용! 체력 "+10 + userData.maxHp*0.01+" 회복");
+        log("소형 물약 사용! 체력 "+(10 + userData.maxHp*0.01)+" 회복");
       }
       userData.hp = Math.min(userData.hp, userData.maxHp);
     }
@@ -388,14 +388,13 @@
           clearInterval(dungeonInterval);
           inDungeon = false;
           document.getElementById("dungeonToggleBtn").innerText = "던전 입장";
-          log("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%와 보유 골드의 50%를 잃습니다");
+          log("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%를 잃습니다");
           userData.exp = Math.floor(userData.exp * 0.7);
-          userData.gold = Math.floor(userData.gold * 0.5);
           userData.hp = userData.maxHp;
           updateUI();
           saveData();
           showTab("home");
-          alert("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%와 보유 골드의 50%를 잃습니다")
+          alert("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%를 잃습니다")
         }
       }, 1000);
     }
