--- a/index.html
+++ b/index.html
@@ -608,7 +608,9 @@
     setInterval(() => {
       if (userData) saveData();
     }, 5000);
-
+    window.signUp = signUp;
+    window.signIn = signIn;
+    window.signOut = signOut;
   </script>
 </body>
 </html>
