--- a/index.html
+++ b/index.html
@@ -419,14 +419,13 @@
           clearInterval(dungeonInterval);
           inDungeon = false;
           document.getElementById("dungeonToggleBtn").innerText = "던전 입장";
-          log("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%와 보유 골드의 50%를 잃습니다");
+          log("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%를 잃습니다");
           userData.exp = Math.floor(userData.exp * 0.7);
-          userData.gold = Math.floor(userData.gold * 0.5);
           userData.hp = userData.maxHp;
           updateUI();
           saveData();
           showTab("home");
-          alert("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%와 보유 골드의 50%를 잃습니다");
+          alert("던전에서 사망했습니다. 체력이 100%회복되고 보유 경험치의 30%를 잃습니다");
         }
       }, 1000);
     }
@@ -608,9 +607,6 @@
     setInterval(() => {
       if (userData) saveData();
     }, 5000);
-    window.signUp = signUp;
-    window.signIn = signIn;
-    window.signOut = signOut;
   </script>
 </body>
 </html>
