--- a/index.html
+++ b/index.html
@@ -131,9 +131,11 @@
     </div>
     <div id="dungeonTab" style="display:none;">
       <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
+        <button id="stageJumpPrev">-10 ⏪</button>
         <button id="stagePrev">⬅</button>
         <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
         <button id="stageNext">➡</button>
+        <button id="stageJumpNext">⏩ +10</button>
       </div>
       <button onclick="enterDungeon()" id="dungeonToggleBtn">던전 입장</button>
     </div>
