--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         }
     
         // 플레이어 공격
-        const monsterEvasion = 0;
+        const monsterEvasion = currentstage;
         const evasionRateMonster = monsterEvasion / (monsterEvasion + userData.dex * 5);
     
         if (Math.random() < evasionRateMonster) {
