--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
     
     <div id="homeTab">
       <p>어서오세요! 던전에 입장하여 전투를 시작하세요.</p>
+      <!-- 채팅 UI -->
+      <div id="chatSection" style="max-width: 400px; margin: 0 auto; text-align: left;">
+        <h3>실시간 채팅</h3>
+        <div id="chatLog" style="height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; background: #fff;"></div>
+        <input type="text" id="chatInput" placeholder="메시지를 입력하세요" style="width: 100%; box-sizing: border-box; margin-top: 5px;" />
+        <button id="sendBtn" style="margin-top: 5px; width: 100%;">전송</button>
+      </div>
     </div>
     <div id="dungeonTab" style="display:none;">
       <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
@@ -627,6 +634,66 @@
     setInterval(() => {
       if (userData) saveData();
     }, 5000);
+    // Firebase Firestore 참조 (기존에 db 선언되어 있어야 함)
+// const db = firebase.firestore(); (firebase-config.js에서 이미 선언된 가정)
+
+const chatLog = document.getElementById("chatLog");
+const chatInput = document.getElementById("chatInput");
+const sendBtn = document.getElementById("sendBtn");
+
+// 메시지 전송 함수
+async function sendMessage() {
+  const text = chatInput.value.trim();
+  if (!text) return alert("메시지를 입력하세요.");
+
+  if (!userData) return alert("로그인 후 사용하세요.");
+
+  try {
+    await db.collection("chatMessages").add({
+      uid: userData.uid,
+      nickname: userData.nickname,
+      message: text,
+      timestamp: firebase.firestore.FieldValue.serverTimestamp()
+    });
+    chatInput.value = "";
+  } catch (err) {
+    console.error("메시지 전송 실패", err);
+    alert("메시지 전송에 실패했습니다.");
+  }
+}
+// 메시지 실시간 구독 (최신 100개)
+db.collection("chatMessages")
+.orderBy("timestamp", "desc")
+.limit(100)
+.onSnapshot(snapshot => {
+chatLog.innerHTML = "";
+const messages = [];
+snapshot.forEach(doc => {
+const data = doc.data();
+messages.push(data);
+});
+// 시간 순으로 다시 뒤집기
+messages.reverse();
+
+messages.forEach(msg => {
+  const time = msg.timestamp ? new Date(msg.timestamp.seconds * 1000).toLocaleTimeString() : "시간없음";
+  const div = document.createElement("div");
+  div.style.padding = "4px 0";
+  div.innerHTML = `<strong>${msg.nickname}</strong> [${time}]: ${msg.message}`;
+  chatLog.appendChild(div);
+});
+
+// 스크롤 맨 아래로 자동 이동
+chatLog.scrollTop = chatLog.scrollHeight;
+});
+
+// 버튼 클릭과 엔터키 전송 이벤트 연결
+sendBtn.addEventListener("click", sendMessage);
+chatInput.addEventListener("keydown", e => {
+  if (e.key === "Enter") {
+    sendMessage();
+  }
+});
   </script>
 </body>
 </html>
