--- a/index.html
+++ b/index.html
@@ -362,11 +362,13 @@
           if (isCrit) {
             dmg = Math.floor(monsterAtk * (monsterCrit / 2000 + 1.1));
             dmg = Math.floor(dmg * dmgReduction);
+            dmg = applyRandomVariance(dmg)
             dmg = Math.max(1, dmg);
             userData.hp -= dmg;
             log(`몬스터의 치명타 공격! 플레이어가 ${dmg} 피해를 받았습니다.`);
           } else {
             dmg = Math.floor(dmg * dmgReduction);
+            dmg = applyRandomVariance(dmg)
             dmg = Math.max(1, dmg);
             userData.hp -= dmg;
             log(`플레이어가 ${dmg} 피해를 받았습니다.`);
@@ -392,11 +394,13 @@
           if (isCrit) {
             const critDamage = playerAtk * (critStat / 2000 + 1.1);
             dmg = Math.floor(critDamage * dmgReductionPlayer);
+            dmg = applyRandomVariance(dmg)
             dmg = Math.max(1, dmg);
             monsterHp -= dmg;
             log(`플레이어의 치명타 공격! 몬스터가 ${dmg} 피해를 받았습니다.`);
           } else {
             dmg = Math.floor(playerAtk * dmgReductionPlayer);
+            dmg = applyRandomVariance(dmg)
             dmg = Math.max(1,dmg);
             monsterHp -= dmg;
             log(`몬스터가 ${dmg} 피해를 받았습니다.`);
