--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
       document.getElementById("potionSmall").innerText = userData.potions.small;
       document.getElementById("potionMedium").innerText = userData.potions.medium;
       document.getElementById("potionLarge").innerText = userData.potions.large;
+      document.getElementById("potionExtralarge").innerText = userData.potions.extralarge;
       document.getElementById("stageDisplay").innerText = currentStage;
       document.getElementById("goldShop").innerText = userData.gold;
       document.getElementById("goldDisplay").innerText = ` 골드: ${userData.gold}`;
