--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
       const rankingList = document.getElementById("rankingList");
       rankingList.innerHTML = "불러오는 중...";
       try {
-        const res = await fetch('http://192.168.10.100:3000/proxy-api/ranking?limit=10');
+        const res = await fetch('https://d7bbee2e3689.ngrok-free.app/api/ranking?limit=10');
         if (!res.ok) throw new Error('랭킹 불러오기 실패');
         const rankings = await res.json();
         
@@ -667,7 +667,7 @@
     //닉네임 중복 검사 함수
     async function isNicknameTaken(nickname) {
       try {
-        const res = await fetch(`http://192.168.10.100:3000/proxy-api/checkNickname?nickname=${encodeURIComponent(nickname)}`);
+        const res = await fetch(`https://d7bbee2e3689.ngrok-free.app/api/checkNickname?nickname=${encodeURIComponent(nickname)}`);
         if (!res.ok) throw new Error('닉네임 체크 실패');
         const data = await res.json();
         return data.taken;
@@ -741,7 +741,7 @@
         const uid = userCredential.user.uid;
         
         // MySQL API에서 유저 데이터 요청
-        const res = await fetch(`http://192.168.10.100:3000/proxy-api/userdata?uid=${uid}`);
+        const res = await fetch(`https://d7bbee2e3689.ngrok-free.app/api/userdata?uid=${uid}`);
         if (!res.ok) {
           alert("사용자 데이터를 불러오는 데 실패했습니다.");
           return;
@@ -764,7 +764,7 @@
     async function saveData() {
       if (!userData) return;
       try {
-        const res = await fetch('http://192.168.10.100:3000/proxy-api/save', {
+        const res = await fetch('https://d7bbee2e3689.ngrok-free.app/api/save', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
           body: JSON.stringify(userData),
@@ -834,7 +834,7 @@
       if (!text) return alert("메시지를 입력하세요.");
       if (!userData) return alert("로그인 후 사용하세요.");
       try {
-        const res = await fetch('http://192.168.10.100:3000/proxy-api/chat/send', {
+        const res = await fetch('https://d7bbee2e3689.ngrok-free.app/api/chat/send', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
           body: JSON.stringify({
