--- a/index.html
+++ b/index.html
@@ -672,12 +672,16 @@
     async function isNicknameTaken(nickname) {
       try {
         const res = await fetch(`https://a7dbbb2a23cf.ngrok-free.app/api/checkNickname?nickname=${encodeURIComponent(nickname)}`);
-        const text = await res.text(); // ← 응답을 JSON 대신 텍스트로 받기
-        console.log('서버 응답:', text); // ← HTML인지 JSON인지 확인
-        const data = JSON.parse(text); // JSON 파싱 시도
-        return data.taken;
+        const text = await res.text();
+        try {
+          const data = JSON.parse(text);
+          return data.taken;
+        } catch (parseErr) {
+          console.error("닉네임 응답이 JSON이 아닙니다. 응답 내용:", text);
+          return false;
+        }
       } catch (error) {
-        console.error('닉네임 중복 검사 에러:', error);
+        console.error("닉네임 중복 검사 에러:", error);
         return false;
       }
     }
