--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@
     
         document.getElementById("authUI").style.display = "none";
         document.getElementById("gameUI").style.display = "block";
+        updateUI();
         document.getElementById("nicknameDisplay").innerText = userData.nickname;
         document.getElementById("bottomStatus").style.display = "flex";
         updateUI();
