--- a/index.html
+++ b/index.html
@@ -729,7 +729,10 @@
             level: 1,
             hp: 100,
             maxHp: 100,
-            potions: { small: 3, medium: 1, large: 0, extralarge: 0 },
+            "potion_small": 3,
+            "potion_medium": 1,
+            "potion_large": 0,
+            "potion_extralarge": 0,
             str: 0,
             dex: 0,
             con: 0,
