--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
       document.getElementById("hp").innerText = userData.hp;
       document.getElementById("maxHp").innerText = userData.maxHp;
       document.getElementById("level").innerText = userData.level;
-      document.getElementById("potionSmall").innerText = userData.potions.small;
-      document.getElementById("potionMedium").innerText = userData.potions.medium;
-      document.getElementById("potionLarge").innerText = userData.potions.large;
+      document.getElementById("potionSmall").innerText = userData.potions_small;
+      document.getElementById("potionMedium").innerText = userData.potions_medium;
+      document.getElementById("potionLarge").innerText = userData.potions_large;
       document.getElementById("potionExtralarge").innerText = userData.potions.extralarge;
       document.getElementById("stageDisplay").innerText = currentStage;
       document.getElementById("goldShop").innerText = userData.gold;
