--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       document.getElementById("potionSmall").innerText = userData.potions_small;
       document.getElementById("potionMedium").innerText = userData.potions_medium;
       document.getElementById("potionLarge").innerText = userData.potions_large;
-      document.getElementById("potionExtralarge").innerText = userData.potions.extralarge;
+      document.getElementById("potionExtralarge").innerText = userData.potions_extralarge;
       document.getElementById("stageDisplay").innerText = currentStage;
       document.getElementById("goldShop").innerText = userData.gold;
       document.getElementById("goldDisplay").innerText = ` 골드: ${userData.gold}`;
