--- a/index.html
+++ b/index.html
@@ -322,19 +322,19 @@
     function autoUsePotion() {
       const missingHp = userData.maxHp - userData.hp;
       if (missingHp <= 0) return;
-      if (userData.potions.extralarge > 0 && missingHp >= 10000 + userData.maxHp*0.15) {
+      if (userData.potions_extralarge > 0 && missingHp >= 10000 + userData.maxHp*0.15) {
         userData.potions_extralarge--;
         userData.hp += Math.floor(10000 + userData.maxHp*0.15)
         log("초대형 물약 사용! 체력 "+Math.floor(10000 + userData.maxHp*0.15)+" 회복");
-      } else if (userData.potions.large > 0 && missingHp >= 1000 + userData.maxHp*0.07) {
+      } else if (userData.potions_large > 0 && missingHp >= 1000 + userData.maxHp*0.07) {
         userData.potions_large--;
         userData.hp += Math.floor(1000 + userData.maxHp*0.07);
         log("대형 물약 사용! 체력 "+Math.floor(1000 + userData.maxHp*0.07)+" 회복");
-      } else if (userData.potions.medium > 0 && missingHp >= 100 + userData.maxHp*0.03) {
+      } else if (userData.potions_medium > 0 && missingHp >= 100 + userData.maxHp*0.03) {
         userData.potions_medium--;
         userData.hp += Math.floor(100 + userData.maxHp*0.03);
         log("중형 물약 사용! 체력 "+Math.floor(100 + userData.maxHp*0.03)+" 회복");
-      } else if (userData.potions.small > 0 && missingHp >= 10 + userData.maxHp*0.01) {
+      } else if (userData.potions_small > 0 && missingHp >= 10 + userData.maxHp*0.01) {
         userData.potions_small--;
         userData.hp += Math.floor(10 + userData.maxHp*0.01);
         log("소형 물약 사용! 체력 "+Math.floor(10 + userData.maxHp*0.01)+" 회복");
