--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
       <input type="number" id="buyCount" min="1" value="1" style="width: 80px;" />
     
       <div style="margin-top: 10px;">
-        <button onclick="buyPotion('small')">소형 물약 구매 (10G)</button>
-        <button onclick="buyPotion('medium')">중형 물약 구매 (100G)</button>
-        <button onclick="buyPotion('large')">대형 물약 구매 (1000G)</button>
-        <button onclick="buyPotion('extralarge')">초대형 물약 구매 (10000G)</button>
+        <button onclick="buyPotion('potions_small')">소형 물약 구매 (10G)</button>
+        <button onclick="buyPotion('potions_medium')">중형 물약 구매 (100G)</button>
+        <button onclick="buyPotion('potions_large')">대형 물약 구매 (1000G)</button>
+        <button onclick="buyPotion('potions_extralarge')">초대형 물약 구매 (10000G)</button>
       </div>
     </div>
 
