--- a/index.html
+++ b/index.html
@@ -821,6 +821,10 @@
               level: userData.level,
               hp: userData.hp,
               maxHp: userData.maxHp,
+              potions_small: userData.potions_small || 0,
+              potions_medium: userData.potions_medium || 0,
+              potions_large: userData.potions_large || 0,
+              potions_extralarge: userData.potions_extralarge || 0,
               str: userData.str,
               dex: userData.dex,
               con: userData.con,
