--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
       document.getElementById("hp").innerText = userData.hp;
       document.getElementById("maxHp").innerText = userData.maxHp;
       document.getElementById("level").innerText = userData.level;
-      document.getElementById("potionSmall").innerText = userData.potions_small;
-      document.getElementById("potionMedium").innerText = userData.potions_medium;
-      document.getElementById("potionLarge").innerText = userData.potions_large;
-      document.getElementById("potionExtralarge").innerText = userData.potions_extralarge;
+      document.getElementById("potionSmall").innerText = userData.potion_small;
+      document.getElementById("potionMedium").innerText = userData.potion_medium;
+      document.getElementById("potionLarge").innerText = userData.potion_large;
+      document.getElementById("potionExtralarge").innerText = userData.potion_extralarge;
       document.getElementById("stageDisplay").innerText = currentStage;
       document.getElementById("goldShop").innerText = userData.gold;
       document.getElementById("goldDisplay").innerText = ` 골드: ${userData.gold}`;
