--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       userData.gold -= totalCost;
     
       // ✅ 수정된 포션 필드 접근 방식 (중첩 객체 X)
-      const potionField = "potions_" + type;
+      const potionField = "potion_" + type;
       userData[potionField] = (userData[potionField] || 0) + count;
     
       log(`${labelMap[type]} 물약 ${count}개를 구매했습니다! (총 ${totalCost}골드)`);
