--- a/index.html
+++ b/index.html
@@ -326,20 +326,20 @@
     function autoUsePotion() {
       const missingHp = userData.maxHp - userData.hp;
       if (missingHp <= 0) return;
-      if (userData.potions_extralarge > 0 && missingHp >= 10000 + userData.maxHp*0.15) {
-        userData.potions_extralarge--;
+      if (userData.potion_extralarge > 0 && missingHp >= 10000 + userData.maxHp*0.15) {
+        userData.potion_extralarge--;
         userData.hp += Math.floor(10000 + userData.maxHp*0.15)
         log("초대형 물약 사용! 체력 "+Math.floor(10000 + userData.maxHp*0.15)+" 회복");
-      } else if (userData.potions_large > 0 && missingHp >= 1000 + userData.maxHp*0.07) {
-        userData.potions_large--;
+      } else if (userData.potion_large > 0 && missingHp >= 1000 + userData.maxHp*0.07) {
+        userData.potion_large--;
         userData.hp += Math.floor(1000 + userData.maxHp*0.07);
         log("대형 물약 사용! 체력 "+Math.floor(1000 + userData.maxHp*0.07)+" 회복");
-      } else if (userData.potions_medium > 0 && missingHp >= 100 + userData.maxHp*0.03) {
-        userData.potions_medium--;
+      } else if (userData.potion_medium > 0 && missingHp >= 100 + userData.maxHp*0.03) {
+        userData.potion_medium--;
         userData.hp += Math.floor(100 + userData.maxHp*0.03);
         log("중형 물약 사용! 체력 "+Math.floor(100 + userData.maxHp*0.03)+" 회복");
-      } else if (userData.potions_small > 0 && missingHp >= 10 + userData.maxHp*0.01) {
-        userData.potions_small--;
+      } else if (userData.potion_small > 0 && missingHp >= 10 + userData.maxHp*0.01) {
+        userData.potion_small--;
         userData.hp += Math.floor(10 + userData.maxHp*0.01);
         log("소형 물약 사용! 체력 "+Math.floor(10 + userData.maxHp*0.01)+" 회복");
       }
