--- a/index.html
+++ b/index.html
@@ -733,10 +733,10 @@
             level: 1,
             hp: 100,
             maxHp: 100,
-            potions_small: 3,
-            potions_medium: 1,
-            potions_large: 0,
-            potions_extralarge: 0,
+            potion_small: 3,
+            potion_medium: 1,
+            potion_large: 0,
+            potion_extralarge: 0,
             str: 0,
             dex: 0,
             con: 0,
