--- a/index.html
+++ b/index.html
@@ -825,10 +825,10 @@
               level: userData.level,
               hp: userData.hp,
               maxHp: userData.maxHp,
-              potions_small: userData.potions_small || 0,
-              potions_medium: userData.potions_medium || 0,
-              potions_large: userData.potions_large || 0,
-              potions_extralarge: userData.potions_extralarge || 0,
+              potion_small: userData.potion_small || 0,
+              potion_medium: userData.potion_medium || 0,
+              potion_large: userData.potion_large || 0,
+              potion_extralarge: userData.potion_extralarge || 0,
               str: userData.str,
               dex: userData.dex,
               con: userData.con,
