--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <p>레벨: <span id="level">1</span></p>
     <p>체력: <span id="hp">100</span> / <span id="maxHp">100</span></p>
     <p>스탯 — STR: <span id="statStr">0</span> | DEX: <span id="statDex">0</span> | CON: <span id="statCon">0</span></p>
-    <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeonTime">60</span>초</p>
+    <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span>
     <p>물약: 소형: <span id="potionSmall">3</span> 중형: <span id="potionMedium">1</span> 대형: <span id="potionLarge">0</span> 초대형: <span id="potionExtralarge">0</span></p>
     <div style="margin-top: 10px;">
       <p>스탯 포인트: <span id="statPointDisplay">0</span></p>
