--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     let inDungeon = false;
     let dungeonInterval;
     let currentStage = 1;
-    const maxStage = 10000;
+    const maxStage = 10000000;
 
     function log(msg) {
       const logDiv = document.getElementById("log");
