--- a/index.html
+++ b/index.html
@@ -817,6 +817,7 @@
     
       document.getElementById("homeTab").style.display = name === "home" ? "block" : "none";
       document.getElementById("dungeonTab").style.display = name === "dungeon" ? "block" : "none";
+      document.getElementById("bossTab").style.display = name === "boss" ? "block" : "none";
       document.getElementById("shopTab").style.display = name === "shop" ? "block" : "none";
       document.getElementById("donateTab").style.display = name === "donate" ? "block" : "none";
       document.getElementById("rankingTab").style.display = name === "ranking" ? "block" : "none";
