--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <p id="bossName">보스 이름: 드래곤</p>
         <p id="bossHp">HP: <span id="bossHpValue">1000</span></p>
       </div>
-      <button id="fightBossBtn">보스와 싸우기</button>
+      <button id="fightBossBtn" onclick="enterBossBattle()">보스와 싸우기</button>
       <div id="bossFightResult"></div>
     </div>
     
