--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       }
     
       #tabs {
+        width: 100%;
         flex-wrap: nowrap;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
