--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     
       #tabs {
         width: 100%;
+        display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
