--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
         gap: 4px;
+        padding: 0 10px;
       }
     
       #tabs button {
