--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         -webkit-overflow-scrolling: touch;
         gap: 4px;
         padding: 0 10px;
+        box-sizing: border-box;
       }
     
       #tabs button {
