--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       font-family: Arial;
       text-align: center;
       background: #f5f5f5;
-      padding: 10px 30px 150px 30px;
+      padding: 10px;
       margin-bottom: 140px;
     }
     button {
@@ -33,14 +33,6 @@
     }
     #gameUI {
       display: none;
-      min-height: calc(100vh - 200px);
-      overflow-y: auto;
-    }
-
-    #homeTab, #dungeonTab, #bossTab, #shopTab, #donateTab, #rankingTab, #arenaTab, #inventoryTab {
-      /* 탭 컨텐츠 영역 높이 최대한 확보 */
-      min-height: 300px;
-      overflow: visible;
     }
     
     #bottomStatus {
