--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <div id="gameUI">
     <div id="tabs" style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-bottom: 10px;">
-      <button id="mobileOnlyButton">모바일 전용 화면 맞</button>
+      <button id="mobileOnlyButton">모바일 전용 화면 맞춤형</button>
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
       <button onclick="showTab('boss')">보스</button>
