--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         return;
       }
       
-      if (userData.statPoints > count) {
+      if (userData.statPoints < count) {
         alert(`보유한 스탯포인트가 ${count}보다 적습니다`)
         return;
       }
