--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,10 @@
     function updateStageDisplay() {
       document.getElementById("stageDisplay").innerText = currentStage;
     }
+
+    function dungeonTpButton() {
+      
+    }
     
     // 버튼 눌렀을 때 반복 실행 설정 함수
     function setupHoldButton(buttonId, callback) {
